delete repo endpoint
